--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,8 @@ project(":desktop") {
 project(":core") {
     apply plugin: "java-library"
 
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
